--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-bittensor
-torch
+aiohttp==3.*
+bittensor==6.*
+datasets==2.*
+openai>=1.3.2, ==1.*
+Pillow==10.*
+requests==2.*
+scikit-learn==1.*
+torch==2.*
+transformers==4.*
 wandb
-transformers
-openai>=1.3.2
-wandb
-requests
-Pillow
-aiohttp
-transformers
-scikit-learn
-datasets
