--- a/envrc.example
+++ b/envrc.example
@@ -4,4 +4,6 @@ export WANDB_API_KEY=some_key
 export OPENAI_API_KEY=some_key
 
 # when running tests locally, it's useful to whitelist your validator key so it can connect to your miner
-export CORETEXT_MINER_ADDITIONAL_WHITELIST_VALIDATOR_KEYS=
+export CORTEXT_MINER_ADDITIONAL_WHITELIST_VALIDATOR_KEYS=
+
+export RICH_TRACEBACK=0
