--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
+      - name: Install nox
+        run: python -m pip install --upgrade nox pip setuptools
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade nox pip setuptools
+        run: nox -s install_test_requirements
       - name: Run tests
-        run: nox -s test
+        run: pytest tests -rP -vv
         env:
           RICH_TRACEBACK: 0
           CORTEXT_MINER_ADDITIONAL_WHITELIST_VALIDATOR_KEYS: ${{ secrets.VALIDATOR_KEY }}
