--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,12 @@
 name: Continuous Integration
 
 on:
-  push:
-    branches: [main, develop]
+#  push:
+#    branches: [main, develop]
+#  pull_request:
+#    branches: [main, develop]
   pull_request:
-    branches: [main, develop]
+    branches: [ non-existent ]
 
 jobs:
   test:
