rm cryptography dep

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 validators/state.json
 bittensor_subnet_template.egg-info/
+bittensor_subnet_template.egg-info
 template/__pycache__/
 __pycache__/
 *.pyc
