make tests work again

--- a/envrc.example
+++ b/envrc.example
@@ -7,3 +7,5 @@ export OPENAI_API_KEY=some_key
 export CORTEXT_MINER_ADDITIONAL_WHITELIST_VALIDATOR_KEYS=
 
 export RICH_TRACEBACK=0
+
+export STABILITY_KEY=some_key
