--- a/envrc.example
+++ b/envrc.example
@@ -1,7 +1,10 @@
-export WANDB_API_KEY=some_key
+export WANDB_API_KEY=key_here
 
 # used both by validator and miner:
-export OPENAI_API_KEY=some_key
+export OPENAI_API_KEY=key_here
+export GOOGLE_API_KEY=key_here
+export ANTHROPIC_API_KEY=key_here
+
 
 # when running tests locally, it's useful to whitelist your validator key so it can connect to your miner
 export CORTEXT_MINER_ADDITIONAL_WHITELIST_VALIDATOR_KEYS=
