Add TTS support

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-validators/state.json
-bittensor_subnet_template.egg-info/
-bittensor_subnet_template.egg-info
-template/__pycache__/
-__pycache__/
+*.egg-info
+__pycache__
 *.pyc
 state.json
 wandb/
 .vscode
 .envrc
 .idea/
+.DS_Store
+venv
