--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,164 @@
-aiohttp==3.*
-bittensor==6.9.3
-datasets==2.*
-envparse==0.2.0
-openai>=1.3.2, ==1.*
-Pillow==10.*
-requests==2.*
-scikit-learn==1.*
-torch==2.*
-transformers==4.*
-wandb
+aiohttp==3.9.0b0
+aiosignal==1.3.1
+ansible==6.7.0
+ansible-core==2.13.13
+ansible-vault==2.1.0
 anthropic==0.19.2
-stability-sdk
-boto3
-anthropic_bedrock
-pyOpenSSL==24.*
-google-generativeai
+anthropic-bedrock==0.8.0
+anyio==4.4.0
+argcomplete==3.4.0
+async-timeout==4.0.3
+attrs==23.2.0
+backoff==2.2.1
+base58==2.1.1
+bittensor==6.9.3
+black==23.7.0
+boto3==1.34.142
+botocore==1.34.142
+cachetools==5.3.3
+certifi==2024.7.4
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+colorlog==6.8.2
+cryptography==42.0.0
+cytoolz==0.12.3
+datasets==2.20.0
+ddt==1.6.0
+decorator==5.1.1
+dill==0.3.8
+distlib==0.3.8
+distro==1.9.0
+docker-pycreds==0.4.0
+ecdsa==0.19.0
+envparse==0.2.0
+eth-hash==0.7.0
+eth-keys==0.5.1
+eth-typing==4.4.0
+eth-utils==2.3.1
+exceptiongroup==1.2.1
+fastapi==0.99.1
+filelock==3.15.4
+frozenlist==1.4.1
+fsspec==2024.5.0
+fuzzywuzzy==0.18.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-ai-generativelanguage==0.6.6
+google-api-core==2.19.1
+google-api-python-client==2.137.0
+google-auth==2.32.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.7.2
+googleapis-common-protos==1.63.2
+grpcio==1.63.0
+grpcio-status==1.62.2
+grpcio-tools==1.62.2
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.0
+huggingface-hub==0.23.4
+idna==3.7
+iniconfig==2.0.0
+intel-openmp==2021.4.0
+Jinja2==3.1.4
+jmespath==1.0.1
+joblib==1.4.2
+Levenshtein==0.25.1
+loguru==0.7.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+mkl==2021.4.0
+more-itertools==10.3.0
+mpmath==1.3.0
+msgpack==1.0.8
+msgpack-numpy-opentensor==0.5.0
 msgspec[yaml]==0.18.6
+multidict==6.0.5
+multiprocess==0.70.16
+munch==2.5.0
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+netaddr==1.3.0
+networkx==3.2.1
+nox==2024.4.15
+numpy==1.26.4
+openai==1.35.12
+packaging==24.1
+pandas==2.2.2
+param==2.1.1
+password-strength==0.0.3.post2
+pathspec==0.12.1
+pillow==10.4.0
+platformdirs==4.2.2
+pluggy==1.5.0
+proto-plus==1.24.0
+protobuf==4.25.3
+psutil==6.0.0
+py==1.11.0
+py-bip39-bindings==0.1.11
+py-ed25519-zebra-bindings==1.0.1
+py-sr25519-bindings==0.2.0
+pyarrow==16.1.0
+pyarrow-hotfix==0.6
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pycryptodome==3.20.0
+pydantic==1.10.17
+Pygments==2.18.0
+PyNaCl==1.5.0
+pyOpenSSL==24.1.0
+pyparsing==3.1.2
+pytest==8.2.2
+pytest-asyncio==0.23.7
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-Levenshtein==0.25.1
+pytz==2024.1
+PyYAML==6.0.1
+rapidfuzz==3.9.4
+regex==2024.5.15
+requests==2.32.3
+resolvelib==0.8.1
+retry==0.9.2
+rich==13.7.1
+rsa==4.9
+s3transfer==0.10.2
+safetensors==0.4.3
+scalecodec==1.2.7
+scikit-learn==1.5.1
+scipy==1.13.1
+sentry-sdk==2.8.0
+setproctitle==1.3.3
+shtab==1.6.5
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+stability-sdk==0.8.6
+starlette==0.27.0
+substrate-interface==1.7.5
+sympy==1.13.0
+tbb==2021.13.0
+termcolor==2.4.0
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+tomli==2.0.1
+toolz==0.12.1
+torch==2.3.1
+tqdm==4.66.4
+transformers==4.42.3
+typing_extensions==4.12.2
+tzdata==2024.1
+uritemplate==4.1.1
+urllib3==1.26.19
+uvicorn==0.22.0
+virtualenv==20.26.3
+wandb==0.17.4
+websocket-client==1.8.0
+win32-setctime==1.1.0
+xxhash==3.4.1
+yarl==1.9.4
