--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,6 @@ wandb/
 .ipynb_checkpoints/
 .venv/
 validators/.ipynb_checkpoints/
-organic.py
-validator.ipynb
-.env
+**/organic.py
+**/validator.ipynb
+**/.env
