add option for subtensor endpoint

--- a/env.example
+++ b/env.example
@@ -14,8 +14,9 @@ PIXABAY_API_KEY=
 CORTEXT_MINER_ADDITIONAL_WHITELIST_VALIDATOR_KEYS=
 
 RICH_TRACEBACK=0
+# no need to fill these in if you use bash start_validator.sh
 BT_SUBTENSOR_NETWORK=
 WALLET_NAME=
 HOT_KEY=
-NET_UID=196
+NET_UID=18
 ASYNC_TIME_OUT=60
