--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/opentensor/bittensor.git@release/6.9.4
+bittensor==6.9.4
 datasets==2.*
 envparse==0.2.0
 openai>=1.3.2, ==1.*
