--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 validators/state.json
-bittensor_subnet_template.egg-info/
-bittensor_subnet_template.egg-info
+Cortex.t.egg-info/
 template/__pycache__/
 __pycache__/
 *.pyc
