refacotring: fix issue in .env

--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-ENV=dev
+ENV=test
 WANDB_API_KEY=
 
 # used both by validator and miner:
@@ -10,13 +10,3 @@ AWS_ACCESS_KEY=
 AWS_SECRET_KEY=
 PIXABAY_API_KEY=
 
-# when running tests locally, it's useful to whitelist your validator key so it can connect to your miner
-CORTEXT_MINER_ADDITIONAL_WHITELIST_VALIDATOR_KEYS=
-
-RICH_TRACEBACK=0
-# no need to fill these in if you use bash start_validator.sh
-BT_SUBTENSOR_NETWORK=
-WALLET_NAME=
-HOT_KEY=
-NET_UID=18
-ASYNC_TIME_OUT=60
