--- a/env.example
+++ b/env.example
@@ -1,12 +1,12 @@
-ENV=test
+# for validators
 WANDB_API_KEY=
-
-# used both by validator and miner:
 OPENAI_API_KEY=
+PIXABAY_API_KEY=
+
+# For validators and miners
 GOOGLE_API_KEY=
 ANTHROPIC_API_KEY=
 GROQ_API_KEY=test
 AWS_ACCESS_KEY=
 AWS_SECRET_KEY=
-PIXABAY_API_KEY=
 
