--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,9 @@ transformers==4.*
 wandb
 anthropic==0.19.2
 stability-sdk
-boto3
+boto3==1.34.131
 anthropic_bedrock
 pyOpenSSL==24.*
 google-generativeai
 groq==0.5.0
-aioboto3
+aioboto3==13.1.1
