--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,10 @@ transformers==4.*
 wandb
 anthropic==0.19.2
 stability-sdk
-boto3==1.34.131
+boto3
 anthropic_bedrock
 pyOpenSSL==24.*
 google-generativeai
 groq==0.5.0
-aioboto3==13.1.1
+aioboto3
 aioredis==2.0.1
