--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - db
     environment:
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - .:/app
 
