--- a/cursor/docker-compose.yml
+++ b/cursor/docker-compose.yml
@@ -1,30 +1,13 @@
 version: "3.9"
 
 services:
-  db:
-    image: postgres:13
-    restart: always
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-    volumes:
-      - postgres_data_score:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-
   web:
     build: .
     restart: always
     ports:
-      - "8000:8000"
-    depends_on:
-      - db
+      - "8001:8000"
     environment:
-      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-      POSTGRES_DB: ${POSTGRES_DB}
+      WALLET_NAME: ${WALLET_HOTKEY}
+      WALLET_HOTKEY: ${WALLET_HOTKEY}
     volumes:
       - .:/app
-
-volumes:
-  postgres_data_score:
