--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-bittensor==6.9.4
-datasets==2.*
-envparse==0.2.0
-openai>=1.3.2, ==1.*
-Pillow==10.*
-requests==2.*
-scikit-learn==1.*
-torch==2.*
-transformers==4.*
+bittensor
+datasets
+envparse
+openai
+Pillow
+requests
+scikit-learn
+torch
+transformers
 wandb
-anthropic==0.19.2
+anthropic
 stability-sdk
 boto3
 anthropic_bedrock
-pyOpenSSL==24.*
+pyOpenSSL
 google-generativeai
-groq==0.5.0
+groq
 aioboto3
 tabulate
+httpx==0.27.2
