--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-bittensor
-datasets
-envparse
-openai
-Pillow
-requests
-scikit-learn
-torch
-transformers
-wandb
-anthropic
-stability-sdk
-boto3
-anthropic_bedrock
-pyOpenSSL
-google-generativeai
-groq
-aioboto3
-tabulate
+bittensor==8.4.3
+datasets==3.1.0
+envparse==0.2.0
+openai==1.55.3
+Pillow==11.0.0
+requests==2.32.3
+scikit-learn==1.5.2
+torch==2.5.1
+transformers==4.46.3
+wandb==0.18.7
+anthropic==0.40.0
+stability-sdk==0.8.6
+boto3==1.35.36
+anthropic_bedrock==0.8.0
+pyOpenSSL==24.3.0
+google-generativeai==0.8.3
+groq==0.13.0
+tabulate==0.9.0
 httpx==0.27.2
+aioboto3==13.2.0
