--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
-bittensor==8.4.3
-datasets==3.1.0
+bittensor==6.9.4
+datasets==2.*
 envparse==0.2.0
-openai==1.55.3
-Pillow==11.0.0
-requests==2.32.3
-scikit-learn==1.5.2
-torch==2.5.1
-transformers==4.46.3
-wandb==0.18.7
-anthropic==0.40.0
-stability-sdk==0.8.6
-boto3==1.35.36
-anthropic_bedrock==0.8.0
-pyOpenSSL==24.3.0
-google-generativeai==0.8.3
-groq==0.13.0
-tabulate==0.9.0
-httpx==0.27.2
-aioboto3==13.2.0
+openai>=1.3.2, ==1.*
+Pillow==10.*
+requests==2.*
+scikit-learn==1.*
+torch==2.*
+transformers==4.*
+wandb
+anthropic==0.19.2
+stability-sdk
+boto3
+anthropic_bedrock
+pyOpenSSL==24.*
+google-generativeai
+groq==0.5.0
+aioboto3
+tabulate
