--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ requests==2.*
 scikit-learn==1.*
 torch==2.*
 transformers==4.*
-wandb
+wandb==0.19.1
 anthropic==0.19.2
 stability-sdk
 boto3
@@ -17,3 +17,5 @@ google-generativeai
 groq==0.5.0
 aioboto3
 tabulate
+numpy==1.25.2
+requests==2.32.3
