--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ requests==2.*
 scikit-learn==1.*
 torch==2.*
 transformers==4.*
-wandb
+wandb==0.19.1
 anthropic==0.19.2
 stability-sdk
 boto3
@@ -18,3 +18,4 @@ groq==0.5.0
 aioboto3
 tabulate
 httpx==0.27.2
+numpy==2.0.2
